database for login signup and contact has been added. what's remaining is: 1. slideshow images of div size and placing and retrieving thewm from database. i think 10 images 2. the three circles after slideshow div there is some gap that doesnot seem fit. it need to be corrected 3. after these things project will be closed IF WE HAVE SOME TIME THEN AFTER FINISHING THESE CHANGINGS ONCE WE WILL RUN THE WEBSITE ON SAME TEAMVIEWER IF EVERYTHING IS COMPLETED AN WE HAVE TIME THEN WE WILL CONTINUE WITH THE LAST PAGE THAT IS "HIRE TEAM". AFTER 12 o'clock. you will explain me each and every bit of code.

--- a/home.css
+++ b/home.css
@@ -485,5 +485,5 @@ ul.social-footer2 li a {
 
 .signup_window_model {
   padding: 50px;
-  height: 67vh;
+  height: 90vh;
 }
